Attempt to fix broken style on github pages

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -22,16 +22,6 @@
     border: 0;
   }
 
-  /** Set the hero to the same color at the background **/
-  .hero {
-    --ifm-hero-background-color: var(--ifm-background-color);
-    --ifm-hero-text-color: var(--ifm-heading-color);
-  }
-  .button {
-    color: var(--ifm-font-color-base-inverse);
-    background-color: var(--ifm-color-primary-lighter);
-  }
-
 
   --ifm-color-primary: #2e8555;
   --ifm-color-primary-dark: #29784c;
