--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -4,6 +4,7 @@
  */
 
 .heroBanner {
+  --ifm-hero-text-color: var(--ifm-heading-color);
   padding: 4rem 0;
   text-align: center;
   position: relative;
